fix bug with x-axis scrollbar

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -19,6 +19,7 @@ html {
 body {
   line-height: 2;
   letter-spacing: 3px;
+  overflow-x: hidden;
 
 }
 /* nav {
